k8s/robot-shop.yml
# Crear namespace
apiVersion: v1
kind: Namespace
metadata:
  name: robot-shop
  labels:
    istio-injection: enabled
---
# Servicio Headless para MongoDB
apiVersion: v1
kind: Service
metadata:
  name: mongodb-headless
  namespace: robot-shop
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
---
# Servicio normal para MongoDB
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: robot-shop
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
---
# StatefulSet MongoDB
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: robot-shop
  labels:
    app: mongodb
spec:
  serviceName: mongodb-headless
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: andherson1039/rs-mongodb
        ports:
        - containerPort: 27017
        livenessProbe:
         tcpSocket:
           port: 27017
         initialDelaySeconds: 30
         periodSeconds: 10
         timeoutSeconds: 5
         failureThreshold: 3
        readinessProbe:
         tcpSocket:
           port: 27017
         initialDelaySeconds: 10
         periodSeconds: 10
#        resources:
#          requests:
#            cpu: "200m"
#            memory: "512Mi"
#          limits:
#            cpu: "400m"
#            memory: "1Gi"
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongodb-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: gp3-default
      resources:
        requests:
          storage: 1Gi
---
# Redis Deployment y Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: robot-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine3.20
        ports:
        - containerPort: 6379
        livenessProbe:
         tcpSocket:
           port: 6379
         initialDelaySeconds: 15
         periodSeconds: 10
        readinessProbe:
         exec:
           command: ["redis-cli", "ping"]
         initialDelaySeconds: 5
         periodSeconds: 5
#       resources:
#         requests:
#            cpu: "100m"
#            memory: "128Mi"
#          limits:
#            cpu: "200m"
#            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: robot-shop
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
  type: ClusterIP
---
# Servicio Headless para MySQL
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless
  namespace: robot-shop
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
---
# Servicio normal para MySQL
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: robot-shop
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
---
# StatefulSet MySQL
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: robot-shop
spec:
  serviceName: mysql-headless
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: andherson1039/rs-mysql-db
        ports:
        - containerPort: 3306
        livenessProbe:
          exec:
            command: ["mysqladmin", "ping"]
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command: ["mysql", "-h", "127.0.0.1", "-e", "SELECT 1"]
          initialDelaySeconds: 10
          periodSeconds: 10
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
          subPath: mysql-data
  volumeClaimTemplates:
  - metadata:
      name: mysql-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: gp3-default
      resources:
        requests:
          storage: 1Gi
---
# RabbitMQ Deployment y Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: robot-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:4.0.3-management-alpine
        ports:
        - containerPort: 5672
        - containerPort: 15672
        livenessProbe:
         tcpSocket:
           port: 5672
         initialDelaySeconds: 60
         timeoutSeconds: 5
         periodSeconds: 10
        readinessProbe:
         exec:
           command: ["rabbitmq-diagnostics", "check_port_connectivity"]
         initialDelaySeconds: 60
         periodSeconds: 30
         timeoutSeconds: 10
         failureThreshold: 3
#        resources:
#          requests:
#            cpu: "200m"
#            memory: "256Mi"
#          limits:
#            cpu: "400m"
#            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: robot-shop
spec:
  selector:
    app: rabbitmq
  ports:
  - name: amqp
    port: 5672
    targetPort: 5672
  - name: management
    port: 15672
    targetPort: 15672
  type: ClusterIP
---
# Catalogue Deployment y Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue
  namespace: robot-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogue
  template:
    metadata:
      labels:
        app: catalogue
    spec:
      containers:
      - name: catalogue
        image: andherson1039/rs-catalogue
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 2
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: catalogue
  namespace: robot-shop
spec:
  selector:
    app: catalogue
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
---
# User Deployment y Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: robot-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: andherson1039/rs-user
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 2
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "150m"
            memory: "240Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: robot-shop
spec:
  selector:
    app: user
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
---
# Cart Deployment y Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  namespace: robot-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
      - name: cart
        image: andherson1039/rs-cart
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 2
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: cart
  namespace: robot-shop
spec:
  selector:
    app: cart
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
---
# Shipping Deployment y Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping
  namespace: robot-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping
  template:
    metadata:
      labels:
        app: shipping
    spec:
      containers:
      - name: shipping
        image: andherson1039/rs-shipping
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 2
        resources:
          requests:
            cpu: "400m"
            memory: "600Mi"
          limits:
            cpu: "600m"
            memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: shipping
  namespace: robot-shop
spec:
  selector:
    app: shipping
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
---
# Payment Deployment y Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: robot-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment
        image: andherson1039/rs-payment:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 2
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "100m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: robot-shop
spec:
  selector:
    app: payment
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
---
# Dispatch Deployment y Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dispatch
  namespace: robot-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dispatch
  template:
    metadata:
      labels:
        app: dispatch
    spec:
      containers:
      - name: dispatch
        image: andherson1039/rs-dispatch
        ports:
        - containerPort: 8080
       # livenessProbe:
       #   exec:
       #     command:
       #     - pgrep
       #     - "dispatch"
       #   initialDelaySeconds: 60
       #   periodSeconds: 30
       #   timeoutSeconds: 10
       #   failureThreshold: 6
       # readinessProbe:
       #   exec:
       #     command:
       #     - /bin/sh
       #     - -c
       #     - 'nc -z localhost 8080'
       #   initialDelaySeconds: 40
       #   periodSeconds: 20
       #   timeoutSeconds: 5
       #   failureThreshold: 4
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: dispatch
  namespace: robot-shop
spec:
  selector:
    app: dispatch
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
---
# Ratings Deployment y Service
apiVersion: apps/v1
kind: Deployment
metadata:
 name: ratings
 namespace: robot-shop
spec:
 replicas: 1
 selector:
   matchLabels:
     app: ratings
 template:
   metadata:
     labels:
       app: ratings
   spec:
     containers:
     - name: ratings
       image: andherson1039/rs-ratings:latest
       ports:
       - containerPort: 80
       livenessProbe:
         tcpSocket:
           port: 80
         initialDelaySeconds: 60
         periodSeconds: 20
         timeoutSeconds: 5
         failureThreshold: 5
       readinessProbe:
         tcpSocket:
           port: 80
         initialDelaySeconds: 30
         periodSeconds: 10
         timeoutSeconds: 3
         failureThreshold: 3
       resources:
         requests:
           cpu: "50m"
           memory: "64Mi"
         limits:
           cpu: "100m"
           memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
 name: ratings
 namespace: robot-shop
spec:
 selector:
   app: ratings
 ports:
 - port: 8080
   targetPort: 80
 type: ClusterIP
---
# Web Deployment y Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: robot-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: andherson1039/rs-web:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 2
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: robot-shop
spec:
  selector:
    app: web
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: robot-shop
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx-external
  tls:
  - hosts:
    - robotshop.andherson33.click
  rules:
  - host: robotshop.andherson33.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 8080
